# 2048_project

./: CMakeLists.txt  Doxyfile  main.cpp
2048/: 2048.cpp  2048.h  CMakeLists.txt  test.cpp
docs/html/: 2048_8cpp.html  2048_8cpp.js  2048_8h.html  2048_8h.js  2048_8h_source.html  dir_39cff49aaef8c4e801bb4116c1b8ab68.html  dir_39cff49aaef8c4e801bb4116c1b8ab68.js  doxygen_crawl.html  files.html  files_dup.js  globals.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js  variables_0.js  variables_1.js
docs/latex/: 2048_8cpp.tex  2048_8h.tex  2048_8h_source.tex  files.tex  main_8cpp.tex  refman.tex
